--- a/菜品/index.html
+++ b/菜品/index.html
@@ -4,30 +4,27 @@
 		<title>Document</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/cai.css">
+		<link rel="stylesheet" href="css/index.css">
 		<script src="js/jquery.min.js"></script>
 		<script src="js/popper.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<style>
-			ul>li>a:hover{color:#f00;}			
-			
-		</style>
 	</head>
 	<body>
 		<div class="container">
+		
 			<div class="text-md-center mt-5">
 				<img class="w-25 " src="img/1560405709201.png" alt="">
 			</div>
 			<!-- 导航栏-->
-			<ul class="daohang nav row no-gutters d-flex justify-content-sm-center justify-content-md-center mt-5">
+			<ul class="daohang nav row no-gutters d-flex justify-content-sm-center justify-content-md-center mt-5 font_size">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">首页</a>
+					<a class="nav-link " href="#">首页</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">关于</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">菜单</a>
+				<li class="nav-item ">
+					<a class="nav-link active" href="#">菜单</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">菜谱</a>
@@ -47,29 +44,8 @@
 			</div>
 			
 			<!-- 热门推荐 -->
-			<div class="hot row no-gutters mt-5 ">
-				<div class="col-sm-12 col-lg-7 text-sm-center d-md-flex justify-content-md-around flex-md-wrap">
-						<div class="mb-sm-2 col-md-6 p-md-1 text-md-left mb-lg-0">
-							<h2 class="">热门推荐</h2>
-							<p class="font_smail">这些是来我们餐厅最受客户欢迎的菜品。</p>
-						</div>
-						<div class="mb-sm-2 col-md-6 p-md-1 mb-lg-0">
-							<img class="w-100" src="./img/ia_100000004.jpg" alt="">
-						</div>
-						<div class="mb-sm-2 col-md-6 p-md-1 mb-lg-0 pt-lg-4">
-							<img class="w-100" src="./img/ia_100000005.jpg" alt="">
-						</div>
-						<div class="mb-sm-2 col-md-6 p-md-1 mb-lg-0 pt-lg-4">
-							<img class="w-100" src="./img/ia_100000006.jpg" alt="">
-						</div>				
-				</div>
-				<div class="col-sm-12 col-lg-5 p-lg-1 pb-lg-4"> 
-					<div class="">
-						<img class="w-100 " src="./img/ia_100000007.jpg" alt="">
-					</div>
-				</div>
-			</div>			
 			
+					
 			
 			<!-- 主菜 -->
 			<div class="mt-5 mb-5">
@@ -77,7 +53,7 @@
 				<p class="font_smail">Main course</p>
 			</div>
 			<div class="row no-gutters">
-				<div class="col-sm-6 col-lg-4 w-100 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-lg-4 w-100 p-2">
 					<img class="w-100 md_height" src="./img/ia_100000008.jpg" alt="">
 					<div class="d-flex justify-content-between px-2">
 						<span>深海蛤蜊</span>
@@ -85,7 +61,7 @@
 					</div>
 					<div class="px-2 font_smail">Deep-sea clam</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 w-100 pr-sm-1 pb-2 ">
+				<div class="col-sm-6 col-lg-4 w-100 p-2 ">
 					<img class="w-100 md_height" src="./img/1560405745534.jpg" alt="">
 					<div class="d-flex justify-content-between px-2">
 						<span>澳洲西冷牛排</span>
@@ -93,7 +69,7 @@
 					</div>
 					<div class="px-2 font_smail">Australian West Cold Steak</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 w-100  pr-sm-1  pb-2">
+				<div class="col-sm-6 col-lg-4 w-100 p-2">
 					<img class="w-100 md_height" src="./img/ia_100000010.jpg" alt="">
 					<div class="d-flex justify-content-between px-2">
 						<span>水果黄桃披萨（8寸）</span>
@@ -101,7 +77,7 @@
 					</div>
 					<div class="px-2 font_smail">Fruit Yellow Peach Pizza (8 inches)</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 w-100 pr-sm-1  pb-2">
+				<div class="col-sm-6 col-lg-4 w-100 p-2">
 					<img class="w-100 md_height" src="./img/ia_100000011.jpg" alt="">
 					<div class="d-flex justify-content-between px-2">
 						<span>意大利肉酱面</span>
@@ -109,7 +85,7 @@
 					</div>
 					<div class="px-2 font_smail">Italy pasta</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 w-100 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-lg-4 w-100 p-2">
 					<img class="w-100 md_height" src="./img/ia_100000012.jpg" alt="">
 					<div class="d-flex justify-content-between px-2">
 						<span>熏香火腿肉</span>
@@ -117,7 +93,7 @@
 					</div>
 					<div class="px-2 font_smail">Smoked ham meat</div>
 				</div>
-				<div class="col-sm-6 col-lg-4 w-100 pr-sm-1  pb-2">
+				<div class="col-sm-6 col-lg-4 w-100 p-2">
 					<img class="w-100 md_height" src="./img/ia_100000013.jpg" alt="">
 					<div class="d-flex justify-content-between px-2">
 						<span>松茸冷面</span>
@@ -128,7 +104,7 @@
 			</div>
 			<div class="h3 mt-5 mb-3">健康轻食</div>
 			<div class="row no-gutters ">
-				<div class="col-sm-6 col-md-4 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-md-4 p-2">
 					<img  class="w-100 mb-2" src="img/ia_100000015.jpg" alt="">
 					<div class="d-flex justify-content-between px-2 ">
 						<span>葱花鸡蛋</span>
@@ -137,7 +113,7 @@
 					<p class="px-2 font_smail">Deep-sea clam</p>
 					<hr>
 				</div>
-				<div class="col-sm-6 col-md-4 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-md-4 p-2">
 					<img  class="w-100 mb-2" src="img/ia_100000015.jpg" alt="">
 					<div class="d-flex justify-content-between px-2 ">
 						<span>葱花鸡蛋</span>
@@ -146,7 +122,7 @@
 					<p class="px-2 font_smail">Deep-sea clam</p>
 					<hr>
 				</div>
-				<div class="col-sm-6 col-md-4 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-md-4 p-2">
 					<img  class="w-100 mb-2" src="img/ia_100000015.jpg" alt="">
 					<div class="d-flex justify-content-between px-2 ">
 						<span>葱花鸡蛋</span>
@@ -155,7 +131,7 @@
 					<p class="px-2 font_smail">Deep-sea clam</p>
 					<hr>
 				</div>
-				<div class="col-sm-6 col-md-4 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-md-4 p-2">
 					<img  class="w-100 mb-2" src="img/ia_100000015.jpg" alt="">
 					<div class="d-flex justify-content-between px-2 ">
 						<span>葱花鸡蛋</span>
@@ -164,7 +140,7 @@
 					<p class="px-2 font_smail">Deep-sea clam</p>
 					<hr>
 				</div>
-				<div class="col-sm-6 col-md-4 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-md-4 p-2">
 					<img  class="w-100 mb-2" src="img/ia_100000015.jpg" alt="">
 					<div class="d-flex justify-content-between px-2 ">
 						<span>葱花鸡蛋</span>
@@ -173,7 +149,7 @@
 					<p class="px-2 font_smail">Deep-sea clam</p>
 					<hr>
 				</div>
-				<div class="col-sm-6 col-md-4 pr-sm-1 pb-2">
+				<div class="col-sm-6 col-md-4 p-2">
 					<img  class="w-100 mb-2" src="img/ia_100000015.jpg" alt="">
 					<div class="d-flex justify-content-between px-2 ">
 						<span>葱花鸡蛋</span>
@@ -233,9 +209,59 @@
 			</div>
 			<!-- 底部 -->
 			<hr class="my-4">
-			<div class="no-gutters">
-				<div class="col-sm-12 col-lg-3"></div>
+			<div class="no-gutters row">
+				<div class="col-sm-12 col-lg-4">
+					<ul class="list-unstyled text-center">
+						<li>上海店</li>
+						<li class="font_smail py-1">订餐电话：028-888-8888</li>
+						<li class="font_smail py-1">邮箱：8888888@qq.com</li>
+						<li class="font_smail py-1">地址：中国互联网省域名市网站区666号</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-lg-4">
+					<ul class="list-unstyled text-center">
+						<li>成都店</li>
+						<li class="font_smail py-1">订餐电话：028-888-8888</li>
+						<li class="font_smail py-1">邮箱：8888888@qq.com</li>
+						<li class="font_smail py-1">地址：中国互联网省域名市网站区666号</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-lg-4">
+					<ul class="list-unstyled text-center">
+						<li>北京店</li>
+						<li class="font_smail py-1">订餐电话：028-888-8888</li>
+						<li class="font_smail py-1">邮箱：8888888@qq.com</li>
+						<li class="font_smail py-1">地址：中国互联网省域名市网站区666号</li>
+					</ul>
+				</div>
 			</div>
+			<div class="w-100 py-4">
+				<img class="100 h-25" src="./img/1560405709201.png" alt="">
+			</div>
+			<ul class="daohang nav row no-gutters d-flex justify-content-sm-center justify-content-md-center mt-5">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">首页</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">关于</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">菜单</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">菜谱</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">招商加盟</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">新闻中心</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">联系我们</a>
+				</li>
+			</ul>
+			<p class="text-center font_smail mt-4 mb-2 ">© Copyright 2014-2019 网站模版All Rights Reserved. 蜀ICP备00000000</p>
 		</div>
 	</body>
 </html>
